2016-01-09  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_smb.c (nasl_smb_connect): Don't cast handle to int.

	* nasl/nasl_var.c (var2int, get_int_var_by_num, get_int_var_by_name)
	(get_int_local_var_by_name): Handle long integers.

	* nasl/nasl_lex_ctxt.h: Adjust functions headers.

	* nasl/openvas_smb_interface.h (SMB_HANDLE): Define as long int.

2017-01-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* omp/omp.c, omp/xml.c: Make sure parameter names in documentation
	match those in code.

2017-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_hosts" is now in gvm-libs/base.

	* base/openvas_hosts.c, base/openvas_hosts.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.
	Don't link openvas_base for test-hosts anymore.

	* COPYING: Removed the files respectively.

	* base/test-hosts.c: Include gvm/base/hosts.h instead
	of openvas_hosts.h.
	(main): Use gvm_* methods from move "hosts" module instead
	of corresponding openvas_* calls.

	* nasl/nasl.c: Include gvm/base/hosts.h instead
	of openvas_hosts.h.
	(main): Use gvm_* methods from move "hosts" module instead
	of corresponding openvas_* calls.

	* osp/osp.c: Include gvm/base/hosts.h instead
	of openvas_hosts.h.
	(osp_connection_new): Use gvm_get_host_type instead of openvas_get_host_type.

2017-01-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/openvas_hosts.c: Fix typos in comments.

2017-01-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_logging.c: Remove outdated reference.

2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "pwpolicy" is now in gvm-libs/base.

	* base/pwpolicy.c, base/pwpolicy.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* COPYING: Removed the files respectively.

2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "credentials" is now in gvm-libs/base.

	* base/credentials.c, base/credentials.h: Removed.
